Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/common/typeArgs/InvalidLocation.out
InvalidLocation.java:10:19: compiler.err.annotation.type.not.applicable.to.type: A
1 error
